[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Menus/Pause.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.239216, 0.227451, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.862745, 0.862745, 0.862745, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreyOutPanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 0, 0, 0, 0.392157 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 1.49829
margin_right = 1280.0
margin_bottom = 721.498
custom_constants/margin_right = 350
custom_constants/margin_top = 100
custom_constants/margin_left = 350
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenuMarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 350.0
margin_top = 100.0
margin_right = 930.0
margin_bottom = 619.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 579.0
margin_bottom = 518.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer"]
margin_right = 578.0
margin_bottom = 517.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="PauseMenuScrollContainer" type="ScrollContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 575.0
margin_bottom = 514.0
custom_styles/bg = SubResource( 2 )
scroll_horizontal_enabled = false

[node name="PauseMenuVBoxContainer" type="VBoxContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 557.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="RestartMatchCenterContainer" type="CenterContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer"]
margin_right = 542.0
margin_bottom = 35.0

[node name="RestartMatchButtonContainer*" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer"]
margin_left = 202.0
margin_right = 340.0
margin_bottom = 35.0
rect_min_size = Vector2( 138, 35 )
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer/RestartMatchButtonContainer*"]
margin_right = 138.0
margin_bottom = 35.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer/RestartMatchButtonContainer*/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 137.0
margin_bottom = 34.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer/RestartMatchButtonContainer*/MarginContainer/PanelContainer"]
margin_right = 136.0
margin_bottom = 33.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer/RestartMatchButtonContainer*/MarginContainer/PanelContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 134.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer/RestartMatchButtonContainer*/MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
margin_right = 132.0
margin_bottom = 29.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="RestartMatchButton*" type="Button" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer/RestartMatchButtonContainer*/MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 131.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 0 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "RESTART MATCH"

[node name="ReturnToRigBuilderCenterContainer" type="CenterContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer"]
margin_top = 50.0
margin_right = 542.0
margin_bottom = 85.0

[node name="ReturnToRigBuilderButtonContainer*" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer"]
margin_left = 171.0
margin_right = 371.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 35 )
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer/ReturnToRigBuilderButtonContainer*"]
margin_right = 200.0
margin_bottom = 35.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer/ReturnToRigBuilderButtonContainer*/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 199.0
margin_bottom = 34.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer/ReturnToRigBuilderButtonContainer*/MarginContainer/PanelContainer"]
margin_right = 198.0
margin_bottom = 33.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer/ReturnToRigBuilderButtonContainer*/MarginContainer/PanelContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 196.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer/ReturnToRigBuilderButtonContainer*/MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
margin_right = 194.0
margin_bottom = 29.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="ReturnToRigBuilderButton*" type="Button" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer/ReturnToRigBuilderButtonContainer*/MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 193.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 0 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "RETURN TO RIG BUILDER"

[node name="MouseSensitivityPanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer"]
material = SubResource( 10 )
margin_top = 100.0
margin_right = 542.0
margin_bottom = 152.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer"]
margin_right = 542.0
margin_bottom = 52.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 541.0
margin_bottom = 51.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 533.0
margin_bottom = 43.0

[node name="MouseSensitivityCenterContainer" type="CenterContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 526.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseSensitivityCenterContainer"]
margin_left = 75.0
margin_right = 451.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseSensitivityCenterContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 118.0
margin_bottom = 15.0
text = "mouse sensitivity:"
align = 1
valign = 1

[node name="MouseSensitivitySlider*" type="HSlider" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseSensitivityCenterContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 292.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 16 )
min_value = 1.0
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="MouseSensitivityValueLabel*" type="Label" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseSensitivityCenterContainer/HBoxContainer"]
margin_left = 296.0
margin_top = 1.0
margin_right = 376.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
valign = 1

[node name="MouseVerticalDragCenterContainer" type="CenterContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 526.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseVerticalDragCenterContainer"]
margin_left = 69.0
margin_right = 457.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseVerticalDragCenterContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 130.0
margin_bottom = 15.0
text = "mouse vertical drag:"
align = 1
valign = 1

[node name="MouseVerticalDragSlider*" type="HSlider" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseVerticalDragCenterContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 0 )
min_value = 1.0
max_value = 150.0
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="MouseVerticalDragValueLabel*" type="Label" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseVerticalDragCenterContainer/HBoxContainer"]
margin_left = 308.0
margin_top = 1.0
margin_right = 388.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
valign = 1

[node name="InputControlsPanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer"]
material = SubResource( 10 )
margin_top = 167.0
margin_right = 542.0
margin_bottom = 197.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/InputControlsPanelContainer"]
margin_right = 542.0
margin_bottom = 30.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/InputControlsPanelContainer/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 541.0
margin_bottom = 29.0
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/InputControlsPanelContainer/MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/InputControlsPanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 533.0
margin_bottom = 21.0
text = "INPUT CONTROLS"
align = 1
valign = 1

[node name="InputControlsGridContainer*" type="GridContainer" parent="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/InputControlsPanelContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 540.0
margin_bottom = 28.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 2

[connection signal="pressed" from="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/RestartMatchCenterContainer/RestartMatchButtonContainer*/MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/RestartMatchButton*" to="." method="_on_RestartMatchButton_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/ReturnToRigBuilderCenterContainer/ReturnToRigBuilderButtonContainer*/MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/ReturnToRigBuilderButton*" to="." method="_on_ReturnToRigBuilderButton_pressed"]
[connection signal="value_changed" from="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseSensitivityCenterContainer/HBoxContainer/MouseSensitivitySlider*" to="." method="_on_MouseSensitivitySlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PauseMenuMarginContainer/PanelContainer/MarginContainer/PauseMenuScrollContainer/PauseMenuVBoxContainer/MouseSensitivityPanelContainer/MarginContainer/PanelContainer/VBoxContainer/MouseVerticalDragCenterContainer/HBoxContainer/MouseVerticalDragSlider*" to="." method="_on_MouseVerticalDragSlider_value_changed"]
